# yelp-assistant

./: .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  env.example  pyproject.toml
api/: Dockerfile  pyproject.toml
api/evals/: eval_retriever.py
api/src/: config.yaml
api/src/api/: app.py
api/src/api/agents/: agents.py  graph.py  qdrant_url.py  retrieval_generation.py  tools.py
api/src/api/agents/prompts/: intent_router_agent.yaml  qa_agent.yaml
api/src/api/agents/superlinked_app/: index.py  query.py
api/src/api/agents/superlinked_app/utils/: utils.py
api/src/api/agents/utils/: prompt_management.py
api/src/api/api/: endpoints.py  middleware.py  models.py
api/src/api/core/: config.py
api/src/api/patches/: __init__.py  instructor_compat.py
chatbot_ui/: Dockerfile  pyproject.toml
chatbot_ui/src/chatbot_ui/: app.py
chatbot_ui/src/chatbot_ui/core/: config.py
chatbot_ui/src/chatbot_ui/utils/: __init__.py  business_card.py  restaurants_map.py
notebooks/: 01-explore-yelp-data.ipynb  02-Multi-attribute search based RAG-pipeline.ipynb  03-Naive RAG pipeline.ipynb  04-evaluation-dataset.ipynb  05-RAG-Evals.ipynb  06-Structured-Outputs-Intro.ipynb  07-Structured-Outputs-RAG.ipynb  08-Prompt-versioning.ipynb  09-Query-Rewriting.ipynb  10-Router.ipynb  11-Single-turn-agent.ipynb  12-Multiturn-Agent.ipynb  14-Human-Feedback.ipynb  config.yaml
notebooks/prompts/: retrieval_generation.yaml
postgres_data/pgdata/: postmaster.pid
postgres_data/pgdata/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres_data/pgdata/base/16384/: 1247  1249  1259  16387  16390  16392  16392_fsm  16398  16399  16401  16401_fsm  16405  16405_fsm  16406  16407  16409  16409_fsm  16413  16414  16415  16417  16418  16419  2579  2604  2606  2608  2610  2619  2619_fsm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  (+12 more)
postgres_data/pgdata/base/4/: 2619
postgres_data/pgdata/base/5/: pg_internal.init
postgres_data/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
