[project]
name = "yelp-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.63.0",
    "groq>=1.0.0",
    "ipykernel>=7.2.0",
    "openai>=2.20.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "langgraph>=1.1.6",
    "langsmith>=0.7.23",
    "matplotlib>=3.10.8",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "sentence-transformers>=3.0.0",
    "superlinked>=37.5.0",
    "superlinked-server>=1.56.4",
]

[tool.uv.workspace]
members = [
    "src/api",
    "api",
    "chatbot_ui",
]
