[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wilfried-tcheumaha", email = "tcheumaha2005@yahoo.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "pydantic-settings>=2.12.0",
    "fastapi-restful>=0.6.0",
    "psutil>=5.9.8",
    "qdrant-client>=1.17.1",
    "superlinked>=37.5.0",
    "superlinked-server>=1.56.4",
    "uvicorn>=0.35.0",
    "langsmith>=0.7.23",
    "instructor>=1.14.5",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
