[project]
name = "chatbot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wilfried-tcheumaha", email = "tcheumaha2005@yahoo.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.12.0",
    "streamlit>=1.54.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
